2006-04-15  Derek Atkins  <derek@ihtfp.com>

	* src/gnome-utils/druid-gnc-xml-import.c:
	  need to #include gmodule.h.

2006-04-15  David Hampton  <hampton@employees.org>

	* src/gnome-utils/gnc-tree-view-price.c:
	* src/gnome-utils/dialog-account.c:
	* src/gnome-utils/glade/commodity.glade:
	* src/gnome-utils/dialog-commodity.c:
	* src/gnome/gnc-plugin-basic-commands.c:
	* src/gnome/glade/commodities.glade:
	* src/gnome/glade/account.glade:
	* src/gnome/glade/price.glade:
	* src/gnome/dialog-commodities.c: Replace "commodity" with
	"security" where it is user visible.  If its possible to determine
	that the user is operating on a currency instead of a commodity,
	update titles/labels to specify "security". Fixes 338382.

	* src/backend/file/io-gncxml-v2.c:
	* src/import-export/hbci/gnc-hbci-kvp.[ch]:
	* src/engine/Account.c:
	* src/engine/Scrub.[ch]: Clean up the xml file some by dropping
	empty kvp strings/frames and 'false' placeholder values.

2006-04-15  Andreas Köhler  <andi5.py@gmx.net>

	* src/gnome-utils/druid-gnc-xml-import.c: Fix to compile on
	  systems with glib < 2.9.

2006-04-15  David Hampton  <hampton@employees.org>

	* src/engine/Account.c:
	* src/engine/gw-engine-spec.scm:
	* src/engine/Transaction.c:
	* src/engine/Transaction.h:
	* src/engine/Split.c:
	* lib/libqof/qof/kvp_frame.[ch]: The kvp_frame_get_string()
	function returns a pointer to an internal string.  Mark it 'const'
	to prevent callers from trying to free it.

2006-04-14  David Hampton  <hampton@employees.org>

	* src/register/ledger-core/split-register-load.c:
	* src/gnome-utils/gnc-tree-view-account.[ch]:
	* src/gnome-utils/dialog-account.c:
	* src/gnome/gnc-plugin-page-account-tree.c:
	* src/gnome/glade/account.glade:
	* src/gnome/gnc-plugin-page-budget.c:
	* src/engine/Account.[ch]: Add a per-account "hidden" flag, and
	update the accounts page and the account quickfill to respect this
	flag.  Also flip the "hide zero balance" flag to a "show zero