@@ -2,6 +2,7 @@ gladedir = $(GNC_GLADE_DIR)
 glade_DATA = \
   billterms.glade \
   businessprefs.glade \
+  choose-owner.glade \
   customer.glade \
   date-close.glade \
   employee.glade \
