@@ -1,3 +1,14 @@
+2006-04-16  Derek Atkins  <derek@ihtfp.com>
+
+	* src/business/business-gnome/glade/choose-owner.glade:
+	* src/business/business-gnome/dialog-choose-owner.[ch]:
+	  Add new files to make the string freeze that define the
+	  interface to choose a customer or vendor for a hand-entered
+	  transaction.  Hopefully we can simplify the input by allowing
+	  users to enter a transaction directly and assigning it to a
+	  customer/vendor by hand (rather than going through the business
+	  interfaces).
+
 2006-04-15  Derek Atkins  <derek@ihtfp.com>
 
 	* src/gnome-utils/druid-gnc-xml-import.c:
